# DIGiDIG

./: .env  .env.example  .env.prod.example  .env.staging.example  .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  config_models.py  cookies.txt  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  logout_test.txt  model.py  new_cookies.txt  new_session.txt  pyproject.toml  requirements.txt  test_cookies.txt  unified_test_runner.py
.github/: Makefile  analyze.prompt.md  copilot-instructions.md  instructions.md
.github/agents/: software-engineer.agent.md
.github/workflows/: base-image.yml  cd.yml  ci-tests.yml  ci.yml  release.yml  rest-api-tests.yml  test.yml  validate-locales.yml
.mcp/digidig-mcp/: README.md  pyproject.toml
_doc/: API-DOCUMENTATION.md  API-ENDPOINTS.md  AUTH-FLOW.md  CHANGELOG.md  CI-CD.md  COMPLETE-TESTING-ANALYSIS.md  CONFIG-MIGRATION.md  CONFIG-SYSTEM-SUMMARY.md  CONFIGURATION.md  DELEGATION-DIAGRAMS.md  DELEGATION-INDEX.md  DELEGATION-QUICK-REFERENCE.md  DIGIDIG-10-SUMMARY.md  DIGIDIG-8-SUMMARY.md  INTEGRATION-TESTS-ANALYSIS.md  JIRA-INTEGRATION.md  LIB-DIRECTORY-MIGRATION.md  LOAD-BALANCED-PROXY.md  LOCALIZATION.md  MAKE-INSTALL-FIX.md  PROJECT-CLEANUP-SUMMARY.md  PROJECT-RESTRUCTURE.md  README.md  REST-API.md  TESTING-UNIFICATION-SUMMARY.md  TESTING.md  TODO.md  TOP_PANE_AUDIT.md  UNIFIED-DOCKER-TESTING.md  UNIT-TESTS-STATUS.md  VOLUMES.md
_test/: .dockerignore  COMPREHENSIVE-COVERAGE-REPORT.md  COVERAGE_REPORT.md  Dockerfile  README.md  TESTING_ANALYSIS.md  conftest.py  pytest.ini  requirements-test.txt  run_tests.py
_test/integration/: manual_auth_flow.py  test_admin_integration.py  test_admin_service.py  test_all_services_config.py  test_identity_integration.py  test_identity_unit.py  test_login_workflow.py  test_logout_workflow.py  test_rest_api_integration.py  test_smtp_config_persistence.py  test_smtp_imap_flow.py
_test/playwright/: README.md  test_header.py
_test/unit/: test_admin_extended.py  test_admin_service.py  test_apidocs_service.py  test_client_extended.py  test_client_service.py  test_config.py  test_config_loader.py  test_config_models.py  test_i18n.py  test_identity_core.py  test_identity_extended.py  test_identity_real.py  test_identity_service.py  test_imap_core.py  test_imap_extended.py  test_imap_real.py  test_imap_service.py  test_rest_api.py  test_rest_api_comprehensive.py  test_rest_api_unit.py  test_services_structure.py  test_smtp_core.py  test_smtp_extended.py  test_smtp_real.py  test_smtp_service.py  test_sso_unit.py  test_storage_core.py  test_storage_extended.py  test_storage_real.py  test_storage_service.py
admin/: Dockerfile  requirements.txt
admin/src/: admin.py
apidocs/: Dockerfile  README.md  requirements.txt
apidocs/src/: apidocs.py
client/: Dockerfile  requirements.txt
client/src/: client.py
common/: README.md  __init__.py  config.py  i18n.py
config/: config.prod.example.yaml  config.test.yaml  config.yaml
digidig/: __init__.py  config.py  config_models.py  jwt_utils.py  language.py  locales
digidig/assets/: style.css
digidig/models/: __init__.py  header.css
docker/base/: Dockerfile  README.md  requirements-base.txt
docs/: API-ENDPOINTS.md  AUTH-TESTING.md  CI-CD.md  CONFIG-MIGRATION.md  DELEGATION-GUIDE.md  DIGIDIG-8-SUMMARY.md  PROJECT-RESTRUCTURE.md  README.md  VOLUMES.md
identity/: Dockerfile  config_example.py  requirements.txt
identity/scripts/: create_admin.py  start.sh
identity/src/: config_loader.py  identity.py
identity/tests/: Dockerfile  requirements.txt  test_api.py
imap/: Dockerfile  requirements.txt
imap/src/: imap.py
letsencrypt/renewal/: digidig.cz-0001.conf
lib/: config_models.py  version.py
lib/common/: config.py  (+1 more)
lib/digidig-core/: README.md  pyproject.toml
lib/digidig-core/digidig_core/: __init__.py
lib/digidig-core/digidig_core/models/: __init__.py
lib/digidig-core/digidig_core/models/service/: __init__.py  server.py
nginx/: common-proxy.conf  nginx.conf
scripts/: detect_hostname.sh  generate_env_from_config.py  installer.sh  jira-comment.sh  run_compose_from_config.sh  setup-production.sh  show_services.py  smoke_identity_login.sh  smoke_login.sh  smoke_sso_login.sh  validate_locales.py  volume-manager.sh
services/identity/: Dockerfile  MIGRATION.md  README.md  config_example.py  pyproject.toml  requirements.txt
services/identity/scripts/: create_admin.py  start.sh
services/identity/src/: config_loader.py  identity.py
services/imap/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/imap/src/: imap.py
services/mail/: Dockerfile  README.md  pyproject.toml  start.sh
services/mail/src/: app.py
services/mail/src/static/css/: compose.css  layout.css  list.css  top-pane.css  view.css
services/mail/src/static/js/: app.js  compose.js  list.js  view.js
services/mail/src/templates/: inbox.html  layout.html
services/mail/src/templates/dark-mode-switch/: dark-mode-switch.html
services/mail/src/templates/pages/: compose.html  list.html  view.html
services/mail/src/templates/top-pane/: top-pane.html
services/services/: Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
services/services/src/: main.py
services/smtp/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/smtp/src/: smtp.py
services/sso/: Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
services/sso/src/: config_loader.py  sso.py
services/sso/src/static/: login.css
services/sso/src/static/css/: login.css  success.css
services/sso/src/templates/: login.html  registration.html  success.html
services/sso/src/templates/auth-button/: auth-button.html
services/sso/src/templates/language-selector/: language-selector.html
services/sso/src/templates/top-pane/: top-pane.html
services/storage/: Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
services/storage/src/: storage.py
smtp/: Dockerfile  requirements.txt
storage/: Dockerfile  requirements.txt
tests/: .dockerignore  Dockerfile  requirements-test.txt
(+131 files in other folders)
