[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digidig-identity"
version = "1.0.0"
description = "DIGiDIG Identity Service - Authentication and user management"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "digidig-core>=1.0.0",
    "asyncpg>=0.29.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["identity*"]

[tool.setuptools.package-data]
identity = ["**/*.py"]

[project.scripts]
digidig-identity = "identity:main"