[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digidig-imap"
version = "1.0.0"
description = "IMAP microservice for DIGiDIG platform"
authors = [
    {name = "DIGiDIG Team", email = "team@digidig.cz"}
]
dependencies = [
    "digidig-core>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0"
]
requires-python = ">=3.12"
readme = "README.md"

[project.scripts]
digidig-imap = "imap.src.imap:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["imap*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
imap = ["*.yaml", "*.yml", "*.json"]