[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digidig-services"
version = "1.0.0"
description = "Services manager for DIGiDIG platform"
authors = [
    {name = "DIGiDIG Team", email = "team@digidig.cz"}
]
dependencies = [
    "digidig-core>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0"
]
requires-python = ">=3.12"
readme = "README.md"

[project.scripts]
digidig-services = "main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["main*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
main = ["*.yaml", "*.yml", "*.json"]