[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digidig-smtp"
version = "1.0.0"
description = "SMTP microservice for DIGiDIG platform"
authors = [
    {name = "DIGiDIG Team", email = "team@digidig.cz"}
]
dependencies = [
    "digidig-core>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0"
]
requires-python = ">=3.12"
readme = "README.md"

[project.scripts]
digidig-smtp = "smtp.src.smtp:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smtp*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
smtp = ["*.yaml", "*.yml", "*.json"]