[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digidig-storage"
version = "1.0.0"
description = "Storage microservice for DIGiDIG platform"
authors = [
    {name = "DIGiDIG Team", email = "team@digidig.cz"}
]
dependencies = [
    "digidig-core>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pymongo>=4.6.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0"
]
requires-python = ">=3.12"
readme = "README.md"

[project.scripts]
digidig-storage = "storage.src.storage:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["storage*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
storage = ["*.yaml", "*.yml", "*.json"]